
Version 1.8.3 patchlevel 13                     Feb ??, 2010

Minor Changes:
 * align() columns can now have ansi color definitions. [GM]
 
Fixes:
 * Heisencrashbug in command parser fixed. Reported by Mercutio. [GM]
 * Bug in randword() and extract() fixed. [MG]
 * Fix several memory leaks. [SW]
 * Help fixes by aumiiari and others. [MG]

Version 1.8.3 patchlevel 12                     Feb 07, 2010

Major Changes:
 * 'mud_url' @config. If this is enabled, accessing the mush with an HTTP
   browser will redirect the user to the selected mud_url. (This may need
   some work and testing by a public place with many clients.) [GM]
 * The internal code for object matching has been rewritten, hopefully
   fixing a few bugs and improving match results in some cases. [MG]

Minor Changes:
 * align() can now do full justification. Suggested by Trinsec@M*U*S*H [GM]
 * Wrapping fixes in align(). Reported by Trinsec@M*U*S*H [GM]
 * Guests will no longer see "Guests can't do that" if @mail is restricted
   to noguest. [GM]
 * Helpfile cleanup. [MG]
 * Expand the @lock key optimizer. Try '@lock me=!!=me'.
 * When objects are destroyed, references to them in locks
   are replaced by #FALSE, so that a newly created object reusing
   some dbref won't pass locks it shouldn't.
 * /'s can now be included in the subject of a @mail 
   message via doubling it up -- @mail foo=a//s//l/What's up? 
   Suggested by Paige.
 * locate() now ignores spaces in its 3rd argument. [MG]
 * Change the default mud_name in mush.cnf from TinyMUSH
   to PennMUSH. Suggested by many people over the years.
 * @firstexit can now take multiple exits, and can affect exits in other
   rooms. Suggested by AnneLions. [MG]
 * Changed some default mush.cnf options. [MG]
 * Remove the old patches.h way of showing installed patches. It was 
   broken and rarely used anyways.
 * Removed the little-used "page_cost" @config option. [MG]
 * Removed costs for @find, @zemit, @entrances and @mail/stats. [MG]